# openapi-python_analysis.json
@@ -726,6 +726,91 @@
                 }
             }
         },
+        "/ocs/v2.php/apps/structureddiary/api/{apiVersion}/service/jobs/to_delete": {
+            "get": {
+                "operationId": "python_analysis-to-delete",
+                "summary": "Lists analysis jobs for the analysis service that can be deleted",
+                "tags": [
+                    "python_analysis"
+                ],
+                "security": [
+                    {},
+                    {
+                        "bearer_auth": []
+                    },
+                    {
+                        "basic_auth": []
+                    }
+                ],
+                "parameters": [
+                    {
+                        "name": "apiVersion",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "enum": [
+                                "v1"
+                            ],
+                            "default": "v1"
+                        }
+                    },
+                    {
+                        "name": "x-structureddiary-nextcloud-api-token",
+                        "in": "header",
+                        "description": "API token registered for this Nextcloud instance",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "OCS-APIRequest",
+                        "in": "header",
+                        "description": "Required to be true for the API request to pass",
+                        "required": true,
+                        "schema": {
+                            "type": "boolean",
+                            "default": true
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Analysis jobs returned",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "required": [
+                                        "ocs"
+                                    ],
+                                    "properties": {
+                                        "ocs": {
+                                            "type": "object",
+                                            "required": [
+                                                "meta",
+                                                "data"
+                                            ],
+                                            "properties": {
+                                                "meta": {
+                                                    "$ref": "#/components/schemas/OCSMeta"
+                                                },
+                                                "data": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string"
+                                                    }
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/ocs/v2.php/apps/structureddiary/api/{apiVersion}/service/jobs/healthcheck": {
             "get": {
                 "operationId": "python_analysis-healthcheck",
@@ -857,6 +942,105 @@
                         }
                     }
                 },
+                "parameters": [
+                    {
+                        "name": "apiVersion",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "enum": [
+                                "v1"
+                            ],
+                            "default": "v1"
+                        }
+                    },
+                    {
+                        "name": "uuid",
+                        "in": "path",
+                        "description": "",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "x-structureddiary-job-token",
+                        "in": "header",
+                        "description": "Token assigned to the analysis job",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "x-structureddiary-job-uuid",
+                        "in": "header",
+                        "description": "UUID assigned by Nextcloud to the analysis job",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "OCS-APIRequest",
+                        "in": "header",
+                        "description": "Required to be true for the API request to pass",
+                        "required": true,
+                        "schema": {
+                            "type": "boolean",
+                            "default": true
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Analysis job status updated",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "required": [
+                                        "ocs"
+                                    ],
+                                    "properties": {
+                                        "ocs": {
+                                            "type": "object",
+                                            "required": [
+                                                "meta",
+                                                "data"
+                                            ],
+                                            "properties": {
+                                                "meta": {
+                                                    "$ref": "#/components/schemas/OCSMeta"
+                                                },
+                                                "data": {
+                                                    "$ref": "#/components/schemas/AnalysisJob"
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/ocs/v2.php/apps/structureddiary/api/{apiVersion}/service/jobs/{uuid}/set_deleted": {
+            "patch": {
+                "operationId": "python_analysis-set-deleted",
+                "summary": "Notify the NC instance that python service has deleted stored files after finalization was successfully",
+                "tags": [
+                    "python_analysis"
+                ],
+                "security": [
+                    {},
+                    {
+                        "bearer_auth": []
+                    },
+                    {
+                        "basic_auth": []
+                    }
+                ],
                 "parameters": [
                     {
                         "name": "apiVersion",
@@ -1196,6 +1380,72 @@
                     }
                 ],
                 "responses": {
+                    "200": {
+                        "description": "Existing analysis artifacts returned",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "required": [
+                                        "ocs"
+                                    ],
+                                    "properties": {
+                                        "ocs": {
+                                            "type": "object",
+                                            "required": [
+                                                "meta",
+                                                "data"
+                                            ],
+                                            "properties": {
+                                                "meta": {
+                                                    "$ref": "#/components/schemas/OCSMeta"
+                                                },
+                                                "data": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "object",
+                                                        "required": [
+                                                            "id",
+                                                            "parent_id",
+                                                            "python_id",
+                                                            "python_parent_id",
+                                                            "checksum"
+                                                        ],
+                                                        "properties": {
+                                                            "id": {
+                                                                "type": "integer",
+                                                                "format": "int64",
+                                                                "nullable": true
+                                                            },
+                                                            "parent_id": {
+                                                                "type": "integer",
+                                                                "format": "int64",
+                                                                "nullable": true
+                                                            },
+                                                            "python_id": {
+                                                                "type": "integer",
+                                                                "format": "int64",
+                                                                "nullable": true
+                                                            },
+                                                            "python_parent_id": {
+                                                                "type": "integer",
+                                                                "format": "int64",
+                                                                "nullable": true
+                                                            },
+                                                            "checksum": {
+                                                                "type": "string",
+                                                                "nullable": true
+                                                            }
+                                                        }
+                                                    }
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
                     "201": {
                         "description": "Analysis artifacts created",
                         "content": {
